# vhagar

./: .env.example  .gitignore  Cargo.toml  Procfile  README.md  index.js  kensai-haskell.cabal  package.json  package.yaml  packages.dhall  shell.nix  spago.dhall  stack.yaml  vhagar.cabal
admin/: Main.purs  index.js  package.json
admin-haskell/: kensai-haskell.cabal  package.yaml
admin-haskell/src/: GODSL.hs  GenUtils.hs  Main.hs
admin/FS/: FS.js  FS.purs
admin/String/: Infelctions.js  Infelctions.purs
migrations/2021-03-29-005906_create_todo/: down.sql  up.sql
src/: GODSL.hs  GQLDSL.hs  Initialise.hs  Main.hs  Markers.hs  ModelGen.hs  cli_args.rs  errors.rs  lib.rs  main.rs  schema.rs  server.rs
src/database/: pool.rs
src/graphql/: handler.rs  mod.rs  model.rs  mutation.rs  query.rs
src/todo/: model.rs
template/: Makefile.template  docker-compose-dev.yml  resolver.go.template  server.go.template
templates/: model.rs.hbs  mutation.rs.hbs  query.rs.hbs  schema.rs.hbs
